# ousb-sim

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt
doc/: ISR.md
src/: CMakeLists.txt  instructions.cpp  instructions.h  main.cpp  ousb.cpp  ousb.h  util.h
