add_executable(Simulator main.cpp ousb.cpp)
target_compile_features(Simulator PRIVATE cxx_std_23)
target_compile_options(Simulator PRIVATE -Wall)
target_compile_options(Simulator PRIVATE -Wextra)
target_compile_options(Simulator PRIVATE -Weverything)
target_compile_options(Simulator PRIVATE -pedantic)
target_compile_options(Simulator PRIVATE -Wthread-safety)
target_compile_options(Simulator PRIVATE -Wself-assign)
target_compile_options(Simulator PRIVATE -Wno-padded)
target_compile_options(Simulator PRIVATE -Wno-c99-extensions)
target_compile_options(Simulator PRIVATE -Wno-c99-compat)
target_compile_options(Simulator PRIVATE -Wno-c++-compat)
target_compile_options(Simulator PRIVATE -Wno-c++98-compat)
target_compile_options(Simulator PRIVATE -Wno-c++98-compat-pedantic)
target_compile_options(Simulator PRIVATE -Wno-c++20-compat)
target_compile_options(Simulator PRIVATE -Wno-pre-c++20-compat-pedantic)
target_compile_options(Simulator PRIVATE -Wno-pre-c++17-compat-pedantic)
target_compile_options(Simulator PRIVATE -Wno-switch-default)
target_compile_options(Simulator PRIVATE -Wno-c++20-extensions)
target_compile_options(Simulator PRIVATE -Wno-unused-macros)
target_compile_options(Simulator PRIVATE -Wno-unsafe-buffer-usage)
target_compile_options(Simulator PRIVATE -Wno-c23-extensions)
target_compile_options(Simulator PRIVATE -Wno-unused-command-line-argument)
target_compile_options(Simulator PRIVATE -Wno-undef)
target_link_libraries(Simulator PRIVATE imgui)
target_link_libraries(Simulator PRIVATE raylib)
